@@ -109,7 +109,8 @@
           Vice President, International Society for Solid State Ionics<br>
           Fellow of the Max Planck Society<br>
           Fellow of the Royal Society of Chemistry<br>
-          Member of the National Academy Leopoldina</p>
+          Member of the National Academy Leopoldina<br>
+          Member of the MRS Board of Directors from (2026 - 2028)</p>
       </div>
     </div>
     <hr>
