@@ -1,3 +1,7 @@
+Prof. Jennifer Rupp elected to the MRS Board of Directors
+October 24, 2025
+Prof. Jennifer L.M. Rupp was elected to the Board of Directors of the Materials Research Society (MRS) on a three year term starting on January 1<sup>st</sup> 2026. The board consists of four elected Officers and 12 to 21 Directors and is the highest governing body of the MRS.
+
 Investorgroup InnoEnergy Leads Pre-Seed Investment in the Chair´s company Qkera
 October 8, 2025
 Investorgroup InnoEnergy Leads Pre-Seed Investment in the Chair´s company Qkera (<a href="https://www.qkera.com/" target="_blank">Qkera.com</a>) to Accelerate Next-Generation Battery Commercialisation. <a href="https://innoenergy.com/news-resources/innoenergy-leads-pre-seed-investment-in-qkera-to-accelerate-next-generation-battery-commercialisation/" target="_blank">Read more</a>.
